Add Buy Me a Coffee

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -15,7 +15,7 @@
 
       gtag("config", "G-L8GTER6Q40");
     </script>
-    
+
     <title>Cantrill.io Courses Duration</title>
 
     <meta charset="UTF-8" />
@@ -188,6 +188,20 @@
               <div class="w3-small w3-opacity">
                 Content last scraped and updated on <%= it.lastUpdateDateTimeUTC
                 %>
+              </div>
+              <div>
+                <script
+                  data-cfasync="false"
+                  data-color="#ff813f"
+                  data-description="Support me on Buy me a coffee!"
+                  data-id="sherif.fanous"
+                  data-message=""
+                  data-name="BMC-Widget"
+                  data-position="Right"
+                  data-x_margin="18"
+                  data-y_margin="18"
+                  src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+                ></script>
               </div>
             </div>
           </div>
